# tasker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
benchmarks/: CMakeLists.txt  busy-exchange.cpp
logger/: log.h
mt/: event.h  hybrid_event.h  mutex.h  noncopyable.h
src/mt/: CMakeLists.txt  hybrid_event.cpp  intrinsic.h  intrinsic_unix.cpp  intrinsic_win32.cpp
src/tasker/: CMakeLists.txt  private_queue.cpp  task_queue.cpp  thread_queue.cpp  ui_queue_android.cpp  ui_queue_macos.mm  ui_queue_win32.cpp
tasker/: async_result.h  private_queue.h  scheduler.h  task.h  task_algorithm.h  task_node.h  task_queue.h  thread_queue.h  ui_queue.h
tests/mt/: CMakeLists.txt  ThreadCallbacksTests.cpp
tests/tasker/: AsyncResultTests.cpp  CMakeLists.txt  GenericTaskQueueTests-inline.h  PrivateQueueTests.cpp  TaskAlgorithmTests.cpp  TaskNodeTests.cpp  TaskQueueTests.cpp  TaskTests.cpp  ThreadQueueTests.cpp  UIQueueTests.cpp  helpers.h  helpers_android.cpp  helpers_generic.cpp  helpers_macos.mm  helpers_win32.cpp  mocks.h
tests/test-helpers/: helpers.h  thread.h
tests/test-helpers/src/: thread.cpp  thread_unix.cpp  thread_win32.cpp
